--- a/app/src/main/res/layout/medicine.xml
+++ b/app/src/main/res/layout/medicine.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:outlineAmbientShadowColor="#009688"
+    android:outlineSpotShadowColor="#009688"
     tools:context=".MedicineActivity"
     tools:ignore="MissingDefaultResource">
 
@@ -13,8 +15,66 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/white"
-        app:menu="@menu/menu_bottom_nav"
         app:itemIconTint="@color/custom_color_bottom_nav"
-        app:itemTextColor="@color/custom_color_bottom_nav"/>
+        app:itemTextColor="@color/custom_color_bottom_nav"
+        app:menu="@menu/menu_bottom_nav" />
+
+    <TextView
+        android:id="@+id/textViewMyMedicine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:text="@string/My_Medicine"
+        android:textColor="@color/pill_diary_color"
+        android:textSize="35sp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_nav"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="320dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="661dp"
+        android:backgroundTint="@color/white"
+        android:foregroundTint="@color/pill_diary_color"
+        app:srcCompat="@drawable/add"
+        app:tint="@color/pill_diary_color"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button"
+        android:layout_below="@+id/textViewMyMedicine"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="292dp"
+        android:layout_marginBottom="444dp"
+        android:text="@string/Current"
+        android:textSize="11sp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="123dp"
+        android:layout_marginBottom="111dp"
+        android:backgroundTint="@color/white"
+        android:outlineSpotShadowColor="#009688"
+        android:text="@string/Add_new_medicine"
+        android:textColor="@color/pill_diary_color" />
 
 </RelativeLayout>
