--- a/app/src/main/res/layout/medicine_edit.xml
+++ b/app/src/main/res/layout/medicine_edit.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
+
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -106,4 +112,8 @@
         android:textSize="30sp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"/>
+
+
+
 </LinearLayout>
+</ScrollView>
