--- a/app/src/main/res/layout/medicine.xml
+++ b/app/src/main/res/layout/medicine.xml
@@ -31,22 +31,18 @@
         android:textSize="35sp"
         android:textStyle="bold" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_nav"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="320dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginBottom="661dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:padding="6dp"
         android:backgroundTint="@color/white"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
         android:foregroundTint="@color/pill_diary_color"
         android:minHeight="48dp"
-        app:srcCompat="@drawable/add"
+        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
         app:tint="@color/pill_diary_color"
         tools:ignore="ContentDescription" />
 
