--- a/app/src/main/res/layout/today.xml
+++ b/app/src/main/res/layout/today.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,23 +9,34 @@
 
     <ListView
         android:id="@+id/listMed"
-        android:layout_width="220dp"
-        android:layout_height="405dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingBottom="30dp"
+        android:clipToPadding="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="170dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/medicineCheck"
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="86dp"
-        android:onClick="checked"
-        android:text="All taken " />
+        android:layout_margin="20dp"
+        android:background="@drawable/btn_back"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="20dp"
+        android:id="@+id/all_taken"
+        android:text="All MEDICINE TAKEN"
+        android:textColor="#FFFFFF"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
