Notification and fix Delete Button on click event

--- a/app/src/main/res/layout/medicine.xml
+++ b/app/src/main/res/layout/medicine.xml
@@ -23,9 +23,11 @@
         android:id="@+id/textViewMyMedicine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/medListView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"
+        android:layout_marginBottom="64dp"
         android:text="@string/My_Medicine"
         android:textColor="@color/pill_diary_color"
         android:textSize="35sp"
@@ -62,15 +64,17 @@
 
     <Button
         android:id="@+id/addMedicineButton"
-        android:layout_width="236dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/medListView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="93dp"
+        android:layout_marginTop="89dp"
         android:layout_marginEnd="82dp"
-        android:layout_marginBottom="125dp"
+        android:layout_marginBottom="60dp"
         android:backgroundTint="@color/white"
         android:outlineSpotShadowColor="#009688"
         android:text="@string/Add_new_medicine"
