--- a/app/src/main/res/layout/person.xml
+++ b/app/src/main/res/layout/person.xml
@@ -45,7 +45,8 @@
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/userName"
@@ -61,17 +62,17 @@
         app:layout_constraintStart_toStartOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/avatar" />
 
-    <TextView
+    <EditText
         android:id="@+id/ages"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:hint="18"
-        android:inputType="phone"
+        android:inputType="number"
         android:textColor="@color/teal_700"
         android:text=""
         android:textAlignment="center"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/years"
         app:layout_constraintHorizontal_bias="0.565"
@@ -84,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="year(s) old"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.561"
@@ -119,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="*click on text to change it"
-        android:textSize="9sp"
+        android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@+id/userName"
         app:layout_constraintEnd_toEndOf="@+id/avatar"
         app:layout_constraintHorizontal_bias="0.524"
@@ -139,4 +140,5 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/male" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
