--- a/app/src/main/res/layout/person.xml
+++ b/app/src/main/res/layout/person.xml
@@ -67,15 +67,15 @@
     <TextView
         android:id="@+id/ages"
         android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_height="30dp"
         android:layout_marginTop="28dp"
         android:hint="18"
         android:inputType="number"
-        android:text=""
         android:textAlignment="center"
         android:textColor="@color/teal_700"
-        android:textSize="18dp"
+        android:textSize="22dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintEnd_toStartOf="@+id/years"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,10 +88,11 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:text="year(s) old"
+        android:layout_marginBottom="5dp"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="@+id/ages"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.553"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName"
         app:layout_constraintVertical_bias="1.0" />
@@ -107,18 +108,23 @@
         app:layout_constraintStart_toStartOf="@+id/ages"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
-    <ImageButton
+    e<ImageButton
         android:id="@+id/logOut"
-        android:layout_width="54dp"
-        android:layout_height="57dp"
+        android:layout_width="68dp"
+        android:layout_height="67dp"
+        android:backgroundTint="@color/white"
+        android:foregroundTint="@color/pill_diary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch1"
         app:layout_constraintVertical_bias="0.475"
-        app:srcCompat="@android:drawable/ic_menu_set_as"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
+        app:tint="@color/pill_diary_color"
+        tools:ignore="SpeakableTextPresentCheck"
+        tools:layout_editor_absoluteX="331dp"/>
+
 
     <TextView
         android:id="@+id/placeholder"
