--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
 
     app:cardElevation="10dp">
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:background="@drawable/dialog_background_custom"
+        android:padding="10dp"
+        android:backgroundTint="@color/white">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,8 +72,8 @@
     <com.rengwuxian.materialedittext.MaterialEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/phoneField"
-        android:hint="Phone number"
+        android:id="@+id/ageField"
+        android:hint="Age"
         android:inputType="text"
         android:text=""
         android:textColor="@color/black"
@@ -78,5 +86,5 @@
         app:met_singleLineEllipsis="true"/>
 
 </LinearLayout>
-
+    </ScrollView>
     </androidx.cardview.widget.CardView>
