--- a/app/src/main/res/layout/medicine.xml
+++ b/app/src/main/res/layout/medicine.xml
@@ -65,4 +65,13 @@
         app:layout_constraintVertical_bias="0.498"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/buttonLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        app:layout_constraintBottom_toTopOf="@+id/medListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
