--- a/app/src/main/res/layout/person.xml
+++ b/app/src/main/res/layout/person.xml
@@ -39,35 +39,37 @@
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="218dp"
+        android:layout_height="167dp"
         android:layout_marginTop="40dp"
+        android:contentDescription="TODO"
         android:src="@drawable/person"
         app:layout_constraintEnd_toEndOf="@+id/title"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="TODO" />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="4dp"
         android:text="USER NAME"
         android:textAlignment="center"
         android:textColor="@color/teal_700"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/avatar"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/avatar" />
 
     <TextView
         android:id="@+id/ages"
-        android:layout_width="48dp"
-        android:layout_height="30dp"
+        android:layout_width="46dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="164dp"
         android:layout_marginTop="28dp"
         android:hint="18"
         android:inputType="number"
@@ -76,26 +78,23 @@
         android:textSize="22dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/switch1"
-        app:layout_constraintEnd_toStartOf="@+id/years"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
+        app:layout_constraintTop_toBottomOf="@+id/userName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/years"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="60dp"
         android:text="year(s) old"
-        android:layout_marginBottom="5dp"
         android:textAlignment="textStart"
-        app:layout_constraintBottom_toBottomOf="@+id/ages"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <TextView
         android:id="@+id/male"
@@ -108,47 +107,49 @@
         app:layout_constraintStart_toStartOf="@+id/ages"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
-    e<ImageButton
-    android:id="@+id/logOut"
-    android:layout_width="68dp"
-    android:layout_height="67dp"
-    android:backgroundTint="@color/white"
-    android:foregroundTint="@color/pill_diary_color"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.498"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/switch1"
-    app:layout_constraintVertical_bias="0.475"
-    app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
-    app:tint="@color/pill_diary_color"
-    tools:ignore="SpeakableTextPresentCheck"
-    tools:layout_editor_absoluteX="331dp"/>
+    e
 
+
+    <ImageButton
+        android:id="@+id/logOut"
+        android:layout_width="68dp"
+        android:layout_height="67dp"
+        android:backgroundTint="@color/white"
+        android:foregroundTint="@color/pill_diary_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        app:layout_constraintVertical_bias="0.103"
+        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
+        app:tint="@color/pill_diary_color"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/placeholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="*click on text to change it"
-        android:textSize="11sp"
-        app:layout_constraintBottom_toTopOf="@+id/userName"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/avatar"
-        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="@+id/avatar"
-        app:layout_constraintVertical_bias="0.896" />
+        app:layout_constraintVertical_bias="0.345" />
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_width="105dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="36dp"
         android:minHeight="48dp"
         android:text="Female"
         android:textColor="@color/teal_700"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/male" />
 
@@ -158,10 +159,11 @@
         android:layout_height="wrap_content"
         android:hint="email"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/ages"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="@+id/userName"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="@+id/userName"
         app:layout_constraintTop_toTopOf="@+id/userName"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintVertical_bias="0.435" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
